mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v13__test__migration_identity.snap
---
source: mullvad-daemon/src/migrations/v13.rs
expression: "serde_json::to_string_pretty(&on_to_on).unwrap()"
---
{
  "settings_version": 14,
  "tunnel_options": {
    "wireguard": {
      "quantum_resistant": "on"
    }
  }
}
