mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v13__test__v13_to_v14_migration.snap
---
source: mullvad-daemon/src/migrations/v13.rs
expression: "serde_json::to_string_pretty(&old_settings).unwrap()"
---
{
  "relay_settings": {
    "normal": {
      "location": {
        "only": {
          "location": {
            "country": "fr"
          }
        }
      },
      "openvpn_constraints": {
        "port": "any"
      },
      "ownership": {
        "only": "MullvadOwned"
      },
      "providers": {
        "only": {
          "providers": [
            "Blix",
            "Creanova"
          ]
        }
      },
      "tunnel_protocol": "wireguard",
      "wireguard_constraints": {
        "allowed_ips": "any",
        "entry_location": {
          "only": {
            "location": {
              "country": "se"
            }
          }
        },
        "ip_version": "any",
        "port": "any",
        "use_multihop": true
      }
    }
  },
  "settings_version": 14,
  "tunnel_options": {
    "wireguard": {
      "quantum_resistant": "on"
    }
  }
}
