mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v13__test__v13_to_v14_migration_pq_off_to_off.snap
---
source: mullvad-daemon/src/migrations/v13.rs
expression: "&migrate_fn(json!({\n    \"tunnel_options\": { \"wireguard\": { \"quantum_resistant\": \"off\" } },\n    \"settings_version\": 13\n})).unwrap()"
---
{
  "settings_version": 14,
  "tunnel_options": {
    "wireguard": {
      "quantum_resistant": "off"
    }
  }
}
