mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v13__test__v13_to_v14_migration_relay_settings_custom-2.snap
---
source: mullvad-daemon/src/migrations/v13.rs
expression: "serde_json::to_string_pretty(&old_settings).unwrap()"
---
{
  "obfuscation_settings": {
    "wireguard_port": {
      "port": "any"
    }
  },
  "relay_settings": {
    "custom": {}
  }
}
