mullvad-daemon/src/migrations/snapshots/mullvad_daemon__migrations__v13__test__v13_to_v14_migration_wireguard_port_any_selected_obfuscation_auto-2.snap
---
source: mullvad-daemon/src/migrations/v13.rs
expression: "serde_json::to_string_pretty(&old_settings).unwrap()"
---
{
  "obfuscation_settings": {
    "selected_obfuscation": "auto",
    "wireguard_port": {
      "port": "any"
    }
  },
  "relay_settings": {
    "normal": {
      "wireguard_constraints": {}
    }
  }
}
